Revert "remove pp temporarily"
This reverts commit 933efcd8a0b550a1d80cb984ed17c50c3d5df1b3.

--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
 
+ * Put pp back in dist
+
 2.000001  2012-11-24 15:49:06 CST6CDT
 
  * Rename to Adenosine
