--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
 
+ * Fix exports in bash
+
 2.001001  2012-12-02 13:38:08 CST6CDT
 
  * Fix setting the host for the first time
