--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
 
+ * Fix tests when user has an XDG system, and add a way to turn XDG off
+
 2.001002  2012-12-13 15:07:41 CST6CDT
 
  * Fix exports in bash
