--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
 
+ * Remove maint/ from CPAN dist (Tommy Stanton)
+ * Fix missing or too low prerews (Tommy Stanton)
  * Do not require MRO::Compat for newer perls
 
 2.001003  2012-12-14 08:34:16 CST6CDT
