--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
 
+ * Put MetaYAML back in dist
+
 2.001004  2012-12-17 09:47:32 CST6CDT
 
  * Make Term::ExtendedColor optional with better error
